--- a/example/package.json
+++ b/example/package.json
@@ -10,14 +10,12 @@
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "react": "file:../node_modules/react",
     "react-blended-components": "file:..",
     "react-dom": "file:../node_modules/react-dom",
-    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "file:../node_modules/react-scripts",
-    "redux": "^4.0.5",
-    "reduxsauce": "^1.2.0"
+    "react-scripts": "file:../node_modules/react-scripts"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
