--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,6 @@
 {
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "semi": false,
   "tabWidth": 2,
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "always",
-  "trailingComma": "none"
+  "useTabs": false,
+  "printWidth": 160,
+  "singleQuote": true
 }
