--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-blended-components",
-  "version": "alpha.20.08.13",
+  "version": "0.20.08.13",
   "description": "React Blended Components",
   "author": "Mohit Awasthi",
   "license": "MIT",
