--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-blended-components",
-  "version": "alpha.30.12.20",
+  "version": "1.0.0",
   "description": "React Blended Components",
   "author": "Mohit Awasthi",
   "license": "MIT",
